direct pasword
